--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@ng-icons/core": "^25.4.0",
     "@ng-icons/ionicons": "^25.4.0",
+    "axios": "^1.5.1",
     "ngx-mask": "^16.3.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
